[gd_scene load_steps=5 format=3 uid="uid://b82d5e3m4qwfn"]

[ext_resource type="Script" uid="uid://cn1pkvhto6ed" path="res://Code/Effects/Shrapnel.gd" id="1_r8km2"]
[ext_resource type="Texture2D" uid="uid://bjroi2urfpx0p" path="res://Assets/Effects/Particles/Shrapnel.png" id="2_jva64"]

[sub_resource type="Curve" id="Curve_width"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_color"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0.8, 0.3, 0.8, 1, 0.5, 0.1, 0.5, 1, 0.3, 0, 0)

[node name="Shrapnel" type="Node2D"]
script = ExtResource("1_r8km2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_jva64")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(1.9, -2.1, 1.9, -1.1, -0.0999999, -1.1, -0.0999999, -0.0999999, -2.1, -0.0999999, -2.1, 0.9, -3.1, 0.9, -3.1, 1.9, -4.1, 1.9, -4.1, 5.1, 0.1, 5.1, 0.1, 4.1, 1.1, 4.1, 1.1, 3.1, 2.1, 3.1, 2.1, 2.1, 4.1, 2.1, 4.1, 1.1, 5.1, 1.1, 5.1, -2.1)

[node name="ShrapnelSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
max_distance = 500.0

[node name="Trail" type="Line2D" parent="."]
width = 2.0
width_curve = SubResource("Curve_width")
gradient = SubResource("Gradient_color")
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-50, -50, 100, 100)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="queue_free"]
